Added FA - ManyBugs

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,28 @@
- <footer>
-        <p class="float-right"><a href="#">Back to top</a></p>
+<footer>
+  <p class="float-right"><a href="#">Back to top</a></p>
         <p>&copy; 2017 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-      </footer>
+    <div class="footer" id="footer">
+        <div class="container">
+            
+              <p class="pull-left">&copy; 2016 - {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by }} <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://http://getbootstrap.com/" rel="nofollow"> Bootstrap</a>.</p>
+
+ 				 <div class="pull-right">
+
+                    <ul class="social">
+                        <li> <a href=""> <i class=" fa fa-linkedin">   </i> </a> </li>
+                        <li> <a href=""> <i class="fa fa-500px">   </i> </a> </li>
+                        <li> <a href=""> <i class="ai ai-google-scholar	">   </i> </a> </li>
+                        <li> <a href=""> <i class="fa fa-github">   </i> </a> </li>
+                        <li> <a href=""> <i class="fa fa-info">   </i> </a> </li>
+                     
+                    </ul>
+                </div>
+                </div>
+            </div>
+            <!--/.row-->
+    </div>
+    <!--/.footer-->
+    
+
+    
+</footer>
