--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,11 @@
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
 
+    <!--Font Awesome -->
+    <link rel="stylesheet" href="../css/font-awesome.css">
+
     <!-- Custom styles for this template -->
     <link href="../assets/stylesheets/carousel.css" rel="stylesheet">
- <!-- Custom styles for this template -->
+     <!-- Custom styles for this template -->
     <link href="../assets/stylesheets/main.css" rel="stylesheet">
+
