--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,2 +1,132 @@
 // Make carousel responsive
 
+
+html, header { 
+ }
+
+body {
+	background: #F8F8F8 url('bg-noise.png') top left;
+}
+
+
+.home { padding: 2.5em 2em 2.5em 2em; }
+
+.wrap {
+  background: #FFF;
+  padding: 3em 2em 2.5em 2em;
+}
+body {
+      padding-bottom: 0px;
+      color: #5a5a5a;
+    }
+
+
+
+/* FOOTER CONTENT
+    -------------------------------------------------- */
+
+
+
+.full {
+    width: 100%;	
+}
+.gap {
+	height: 30px;
+	width: 100%;
+	clear: both;
+	display: block;
+}
+.footer {
+	background: #E3E3E3;
+	height: auto;
+	padding-bottom: 70px;
+	position: relative;
+	width: 100%;
+	border-bottom: 1px solid #CCCCCC;
+	border-top: 4px solid #DDDDDD;
+	max-width: 1080px;
+ 	margin: 0 auto;
+  
+  box-sizing: border-box; 
+}
+.footer p {
+	margin: 10px;
+}
+
+.footer ul {
+	font-size: 13px;
+	list-style-type: none;
+	margin-left: 0;
+	padding-left: 0;
+	margin-top: 15px;
+	color: #7F8C8D;
+}
+.footer ul li a {
+	padding: 0 0 5px 0;
+	display: block;
+}
+.footer a {
+	color: #78828D
+}
+.supportLi h4 {
+	font-size: 20px;
+	font-weight: lighter;
+	line-height: normal;
+	margin-bottom: 0 !important;
+	padding-bottom: 0;
+}
+
+.bg-gray {
+	background-image: -moz-linear-gradient(center bottom, #BBBBBB 0%, #F0F0F0 100%);
+	box-shadow: 0 1px 0 #B4B3B3;
+}
+.social li {
+	background: none repeat scroll 0 0 #B5B5B5;
+	border: 2px solid #B5B5B5;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	-o-border-radius: 50%;
+	-ms-border-radius: 50%;
+	border-radius: 50%;
+	float: left;
+	height: 36px;
+	line-height: 36px;
+	margin: 0 8px 0 0;
+	padding: 0;
+	text-align: center;
+	width: 36px;
+	transition: all 0.5s ease 0s;
+	-moz-transition: all 0.5s ease 0s;
+	-webkit-transition: all 0.5s ease 0s;
+	-ms-transition: all 0.5s ease 0s;
+	-o-transition: all 0.5s ease 0s;
+}
+.social li:hover {
+	transform: scale(1.15) rotate(360deg);
+	-webkit-transform: scale(1.1) rotate(360deg);
+	-moz-transform: scale(1.1) rotate(360deg);
+	-ms-transform: scale(1.1) rotate(360deg);
+	-o-transform: scale(1.1) rotate(360deg);
+}
+.social li a {
+	color: #EDEFF1;
+}
+.social li:hover {
+	border: 2px solid #2c3e50;
+	background: #2c3e50;
+}
+.social li a i {
+	font-size: 24px;
+	margin: 6px 0px 3px 2px;
+	color: #EDEFF1 !important;
+}
+
+.footer p.pull-left {
+	padding-top: 15px;
+}
+.align {
+	padding-top: 15px;
+}
+
+
+
