--- a/_includes/mainCarousel.html
+++ b/_includes/mainCarousel.html
@@ -1,3 +1,7 @@
+  
+           <h3> Website being currently updated! Jan/2017 </h3>
+
+
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
