Fix footer layout

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,18 +2,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <link rel="icon" href="{{base_path}}/favicon.ico">
 
     <title>Carousel Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{base_path}}/css/bootstrap.min.css" rel="stylesheet">
 
     <!--Font Awesome -->
     <link rel="stylesheet" href="../css/font-awesome.css">
 
     <!-- Custom styles for this template -->
-    <link href="../assets/stylesheets/carousel.css" rel="stylesheet">
+    <link href="{{base_path}}/assets/stylesheets/carousel.css" rel="stylesheet">
      <!-- Custom styles for this template -->
-    <link href="../assets/stylesheets/main.css" rel="stylesheet">
+    <link href="{{base_path}}/assets/stylesheets/main.css" rel="stylesheet">
 
