--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 
 
  <footer class="footer">
-      <div class="container text-muted">
+      <div class="text-muted">
       
 
       <div class="row">
@@ -18,7 +18,7 @@
                         <li> <a href=""> <i class="fa fa-500px">   </i> </a> </li>
                         <li> <a href=""> <i class="ai ai-google-scholar	">   </i> </a> </li>
                         <li> <a href=""> <i class="fa fa-github">   </i> </a> </li>
-                        <li> <a href=""> <i class="fa fa-info">   </i> </a> </li>
+                        <li> <a href="{{base_path}}/readme"> <i class="fa fa-info">   </i> </a> </li>
                      
                     </ul>
                 </div>	
