--- a/_includes/mainCarousel.html
+++ b/_includes/mainCarousel.html
@@ -11,7 +11,7 @@
       </ol>
       <div class="carousel-inner " role="listbox">
         <div class="carousel-item active">
-          <img class="first-slide img-fluid" src="img/landing3.jpg" alt="First slide">
+          <img class="first-slide img-fluid" src="{{base_path}}/img/landing3.jpg" alt="First slide">
           <div class="container">
             <div class="carousel-caption d-none d-md-block text-left">
               <h1>Example headline.</h1>
@@ -21,7 +21,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img class="second-slide img-fluid" src="img/landing1.jpg" alt="Second slide">
+          <img class="second-slide img-fluid" src="{{base_path}}/img/landing1.jpg" alt="Second slide">
           <div class="container">
             <div class="carousel-caption d-none d-md-block">
               <h1>Another example headline.</h1>
@@ -31,7 +31,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img class="third-slide img-fluid" src="img/landing2.jpg" alt="Third slide">
+          <img class="third-slide img-fluid" src="{{base_path}}/img/landing2.jpg" alt="Third slide">
           <div class="container">
             <div class="carousel-caption d-none d-md-block text-right">
               <h1>One more for good measure.</h1>
@@ -41,7 +41,7 @@
           </div>
         </div>
          <div class="carousel-item">
-          <img class="fourth-slide img-fluid" src="img/landing4.jpg" alt="Third slide">
+          <img class="fourth-slide img-fluid" src="{{base_path}}/img/landing4.jpg" alt="Third slide">
           <div class="container">
             <div class="carousel-caption d-none d-md-block text-right">
               <h1>One more for good measure.</h1>
