--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,20 +1,30 @@
 
-    <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
+<nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="#">Carousel</a>
+      <a class="navbar-brand" href="{{base_path}}/">{{site.title}}</a>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+         <li class="nav-item">
+            <a class="nav-link disabled" href="{{base_path}}/science">science</a>
+          </li>
+           <li class="nav-item">
+            <a class="nav-link" href="{{base_path}}/publications">publications</a>
+          </li>
+           <li class="nav-item">
+            <a class="nav-link" href="{{base_path}}/codes">codes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link disabled" href="{{base_path}}/photography">photography</a>
+          </li>
+           <li class="nav-item">
+            <a class="nav-link disabled" href="{{base_path}}/blog">blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
+            <a class="nav-link" href="{{base_path}}/contact">contact</a>
           </li>
+        
         </ul>
         <form class="form-inline mt-2 mt-md-0">
           <input class="form-control mr-sm-2" type="text" placeholder="Search">
