--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
     <meta name="author" content="">
     <link rel="icon" href="{{base_path}}/favicon.ico">
 
-    <title>Carousel Template for Bootstrap</title>
+    <title>Victor Caldas</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{{base_path}}/css/bootstrap.min.css" rel="stylesheet">
