add codes - nojs

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,3 +17,5 @@
      <!-- Custom styles for this template -->
     <link href="{{base_path}}/assets/stylesheets/main.css" rel="stylesheet">
 
+    <!-- Github cards  -->
+    <link rel="stylesheet" href="{{base_path}}/assets/stylesheets/github-style.css">
