--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -8,3 +8,10 @@
     <script src="{{base_path}}/assets/js/ie10-viewport-bug-workaround.js"></script>
 
 
+    <!-- Scripts for Github repos -->
+
+	<script src="{{base_path}}/assets/js/github/jquery.github.min.js"></script>
+
+	<script>
+		$("[data-repo]").github();
+	</script>
