--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -1,13 +1,31 @@
----
-permalink: /contact/
-title: ""
-modified: 2016-04-18T16:39:37-04:00
-author_profile: true
-layout: default
----
+<!DOCTYPE html>
+<html lang="en">
+
+  <head>
+    {% include head.html %}
+  </head>
+
+  <body>
+    {% include navbar.html %}
+
+    {% include mainCarousel.html %}
+    <div class="container"> 
+  
+
+      <!-- FOOTER -->
+      {% include footer.html %}
+
+      </div><!-- /.container -->
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+       {% include scripts.html %}
+  </body>
+</html>
 
 
-     {% include mainCarousel.html %}
+     
     
 
    
