--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,15 @@
   <body>
     {% include navbar.html %}
 
-    <div class="container"> 
+    <div class="container">
+
       <div class="wrap">
+      <header>
+        <h1 class="entry-title">{{ page.title }}</h1>
+        <h2>{{ page.subtitle }}</h2>
+      
+      </header>
+      
           {{ content }}
       </div>
     
