--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -7,9 +7,10 @@
 
   <body>
     {% include navbar.html %}
-
-    {% include mainCarousel.html %}
-    <div class="container"> 
+  {% include mainCarousel.html %}
+     <div class="container px-0"> 
+  
+   
   
 
       <!-- FOOTER -->
