--- a/_includes/mainCarousel.html
+++ b/_includes/mainCarousel.html
@@ -11,16 +11,16 @@
       </ol>
       <div class="carousel-inner " role="listbox">
         <div class="carousel-item active">
-          <img class="d-block img-fluid" src="{{base_path}}/img/landing1.jpg" alt="First slide">
+          <img class="d-block img-fluid" src="{{base_path}}/img/landing1.jpg" alt="First slide" style="width:100%; height:100%">
         </div>
         <div class="carousel-item">
-          <img class="d-block img-fluid" src="{{base_path}}/img/landing3.jpg" alt="Second slide">
+          <img class="d-block img-fluid" src="{{base_path}}/img/landing3.jpg" alt="Second slide" style="width:100%; height:100%">
         </div>
         <div class="carousel-item">
-          <img class="d-block img-fluid" src="{{base_path}}/img/landing2.jpg" alt="Third slide">
+          <img class="d-block img-fluid" src="{{base_path}}/img/landing2.jpg" alt="Third slide" style="width:100%; height:100%">
         </div>
          <div class="carousel-item">
-          <img class="d-block img-fluid" src="{{base_path}}/img/landing4.jpg" alt="Third slide">
+          <img class="d-block img-fluid" src="{{base_path}}/img/landing4.jpg" alt="Third slide" style="width:100%; height:100%">
         </div>
       </div>
       <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
