--- a/_sass/custom/_page.scss
+++ b/_sass/custom/_page.scss
@@ -35,3 +35,11 @@ body {
 	border-radius: 15px;
 	overflow: hidden;
 }
+
+
+/* Navbar
+-------------------------------------------------- */
+
+.nav-item{
+  padding-right: 20px;
+}
