--- a/css/main.scss
+++ b/css/main.scss
@@ -10,3 +10,4 @@
 @import "bootstrap";  //#Also imports custom.scss
 
 @import "../assets/fonts/font-awesome-4.7.0/scss/font-awesome";
+@import "../assets/fonts/academicons/css/academicons.css";
