--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -13,5 +13,7 @@
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="{{base_path}}/assets/js/ie10-viewport-bug-workaround.js"></script>
-    <script src="{{base_path}}//assets/js/ie-emulation-modes-warning.js"></script>
-    <script src="{{base_path}}//assets/js/vendor/jekyll-search.min.js"></script>
+    <script src="{{base_path}}/assets/js/ie-emulation-modes-warning.js"></script>
+    <script type="text/javascript" src="{{base_path}}//assets/js/vendor/jekyll-search.min.js"></script>
+
+    <script type="text/javascript" src="{{base_path}}/assets/js/pubs.js"></script>
