--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -1,21 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
-
-  <head>
-    {% include head.html %}
-  </head>
-
-  <body>
-     {% include navbar2.html %}
-   
-      {{content}}
+---
+layout: default
+---
 
 
-      {% include footer.html %}
+<!-- Carousel on landing page -->
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-       {% include scripts.html %}
-  </body>
-</html>
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <div class="container">
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
+      </ol>
+      <div class="carousel-inner " role="listbox">
+        <div class="carousel-item active">
+          <img class="d-block img-fluid" src="{{base_path}}/img/landing2.jpg" alt="First slide" style="width:100%; height:100%">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block img-fluid" src="{{base_path}}/img/landing4.jpg" alt="Second slide" style="width:100%; height:100%">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block img-fluid" src="{{base_path}}/img/landing1.jpg" alt="Third slide" style="width:100%; height:100%">
+        </div>
+         <div class="carousel-item">
+          <img class="d-block img-fluid" src="{{base_path}}/img/landing3.jpg" alt="Third slide" style="width:100%; height:100%">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+      </div>
+</div>
+
