--- a/_includes/navbar2.html
+++ b/_includes/navbar2.html
@@ -3,9 +3,6 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-     <li class="nav-item">
-            <a class="nav-link active" href="/readme"><i class="fa fa-info-circle fa-2x " aria-hidden="true"></i></a>
-        </li>
 
    <a class="navbar-brand" href="/">{{site.title}}</a>
 
@@ -33,6 +30,10 @@
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
               </form>
             </li>
+
+        <li class="nav-item info-icon">
+            <a class="nav-link active" href="/readme"><i class="fa fa-info-circle fa-2x " aria-hidden="true"></i></a>
+        </li>
 
        
 
