--- a/_sass/custom/_page.scss
+++ b/_sass/custom/_page.scss
@@ -1,12 +1,15 @@
 
 body {
-	background: #373737 url('bg-noise.png') top left;   
+	background: #483737 url('bg-noise.png') top left;   
 }
 
 
 .navbar {
   margin-bottom: 20px;
+  border: 3pxx§x§§;
 }
+
+
 
 .container {
 	background-color: white;
@@ -42,6 +45,10 @@ body {
 
 .nav-item{
   padding-right: 20px;
+}
+
+.info-icon {
+  margin-top:  -5px;
 }
 
 
