--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -20,7 +20,7 @@ layout: default
 
        <li><a href="https://orcid.org/0000-0002-4263-0786"><i class="ai ai-orcid" aria-hidden="true"></i> ORCID</a></li>
 
-       <li><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K4254688H5"><myicon class="icon"><img src="{{base_path}}/assets/icons/lattes-fav-icon.png"></myicon> Lattes CV</a></li>
+       <li><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K4254688H5"><myicon class="icon"><img alt="Lattes Icon" src="{{base_path}}/assets/icons/lattes-fav-icon.png"></myicon> Lattes CV</a></li>
 
        <li><a href="https://scholar.google.com/citations?user=vdKIs70AAAAJ&hl=en"><i class="ai ai-google-scholar-square" aria-hidden="true"></i>  Google Scholar</a></li>
 
