--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -1,4 +1,4 @@
-/* Landing and Default Specs*/
+// Landing and Default Specs
 
 #landing {
   margin: 0;
@@ -8,7 +8,7 @@
   padding-top: 50px;
 }
 
-/* Arrow on the main page */
+// Arrow on the main page 
 .down {
   color: #FFF;
   position: absolute;
