--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
     <link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
 
     <!-- Theme CSS -->
-    <link rel="stylesheet" href="/assets/css/main.min.css">
+    <link rel="stylesheet" href="/assets/css/main.css">
 
 
 </head>
