Add Lattes icon.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,6 @@
 
 <footer class="footer">
     <div class="text-center">
-      <p>Build with Jekyll and <span class="love">❤</span>. Get the source<a href="https://github.com/vcaldas/vcaldas.github.io"> here!</a> <a href="/info.html">
-        <i class="fa fa-info-circle" style="color:gray"></i> </a>
+      <p>Build with Jekyll and <span class="love">❤</span>. Get the source<a href="https://github.com/vcaldas/vcaldas.github.io"> here!</a> 
     </div>
 </footer>
