--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -10,7 +10,7 @@
       <a aria-label="My Vimeo" target="_blank" href="{{site.vimeo}}"><i class="icon fa fa-vimeo" aria-hidden="true"></i></a>
       <a aria-label="My Github" target="_blank" href="https://github.com/{{site.github}}"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
     </div>
-    <a class="link" href="#about" data-scroll>Research</a>
-    <a class="link" href="#projects" data-scroll>Projects</a>
+    <!-- <a class="link" href="#about" data-scroll>Research</a>
+    <a class="link" href="#projects" data-scroll>Projects</a> -->
 </div>
 <a class="down" href="#contact" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
