--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Grayscale - Start Bootstrap Theme</title>
+    <title>VCaldas Personal website</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/assets/styles/main.css" rel="stylesheet">
