--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,6 @@
 @import "../vendor/bootstrap/bootstrap";
 @import "../vendor/font-awesome/font-awesome";
-
+@import "../vendor/academicons/academicons";
 
 @import "variables.scss";
 @import "mixins.scss";
