--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -287,6 +287,7 @@ ul.banner-social-buttons {
 }
 
 @import "footer.scss";
+@import "publications.scss";
 
 .hline-w {
     border-bottom: 2px solid black;
