--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -4,7 +4,7 @@ layout: default
 
     <div class="row cv">
       <div class="col col-md-8 col-md-offset-1">
-        <div class="container">
+        <div class="container publications">
           {{ content }}
         </div>
       </div>
