--- a/_includes/navcore.html
+++ b/_includes/navcore.html
@@ -11,9 +11,10 @@
             <li class="nav-item">
                 <a class="nav-link" href="/publications">Publications</a>
             </li>
-            <!-- <li class="nav-item">
-                <a class="nav-link" href="#blog">Blog</a>
-            </li>
+           <!-- <li class="nav-item">
+                <a class="nav-link" href="/blog">Blog</a>
+            </li> -->
+            <!--
             <li class="nav-item">
                 <a class="nav-link" href="#projects">Projects</a>
             </li>
