--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -2,6 +2,7 @@
   background: $footer-bg;
   padding: 30px 0;
   color: #FFF;
+  margin-top: 1rem;
     p {
         font-size: 14px;
         margin: 0;
