--- a/assets/css/particles.css
+++ b/assets/css/particles.css
@@ -3,48 +3,36 @@
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
     filter: alpha(opacity=40);
     opacity: .4;
-    top: 0;
-  }
-
+    top: 0; }
   50% {
     -ms-filter: none;
     -webkit-filter: none;
     filter: none;
     opacity: 1;
-    top: -10px;
-  }
-
+    top: -10px; }
   to {
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
     filter: alpha(opacity=40);
     opacity: .4;
-    top: 0;
-  }
-}
+    top: 0; } }
 
 @keyframes pulse {
   from {
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
     filter: alpha(opacity=40);
     opacity: .4;
-    top: 0;
-  }
-
+    top: 0; }
   50% {
     -ms-filter: none;
     -webkit-filter: none;
     filter: none;
     opacity: 1;
-    top: -10px;
-  }
-
+    top: -10px; }
   to {
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
     filter: alpha(opacity=40);
     opacity: .4;
-    top: 0;
-  }
-}
+    top: 0; } }
 
 #particles-js {
   background: #0b0c10;
@@ -54,8 +42,10 @@
   min-height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed;
-}
+  background-attachment: fixed; }
+  #particles-js .particles-js-canvas-el {
+    width: 100vw !important;
+    height: 100vh !important; }
 
 .content {
   z-index: 1;
@@ -67,53 +57,37 @@
   margin: 0 auto;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-
-.content .site-title {
-  font-size: 50px;
-  display: block;
-  line-height: 1;
-}
-
-@media only screen and (min-width: 768px) {
+      transform: translate(-50%, -50%); }
   .content .site-title {
-    margin: 0;
-    font-size: 100px;
-  }
-}
-
-.content .site-description {
-  font-size: 20px;
-  display: block;
-  line-height: 1;
-  margin: 5px 0 10px 0;
-}
-
-@media only screen and (min-width: 768px) {
+    font-size: 50px;
+    display: block;
+    line-height: 1; }
+    @media only screen and (min-width: 768px) {
+      .content .site-title {
+        margin: 0;
+        font-size: 100px; } }
   .content .site-description {
-    font-size: 40px;
-  }
-}
-
-.content .link {
-  color: #FFF;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  text-decoration: none;
-  font-size: 15px;
-  margin: 10px;
-}
-
-@media only screen and (min-width: 768px) {
-  .content .link {
     font-size: 20px;
-  }
-}
+    display: block;
+    line-height: 1;
+    margin: 5px 0 10px 0; }
+    @media only screen and (min-width: 768px) {
+      .content .site-description {
+        font-size: 40px; } }
+  .content .link {
+    color: #FFF;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    text-decoration: none;
+    font-size: 15px;
+    margin: 10px; }
+    @media only screen and (min-width: 768px) {
+      .content .link {
+        font-size: 20px; } }
 
 .down {
   color: #FFF;
@@ -124,71 +98,54 @@
   display: block;
   text-align: center;
   font-size: 30px;
-  cursor: pointer;
-}
-
-.down .icon {
-  position: absolute;
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  width: 100px;
-  height: 100px;
-  fill: #fff;
-  -webkit-animation: pulse 1.3s infinite;
-  animation: pulse 1.3s infinite;
-}
-
-.down .icon:hover {
-  color: white;
-}
-
-.down .icon:active {
-  color: white;
-}
+  cursor: pointer; }
+  .down .icon {
+    position: absolute;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+    width: 100px;
+    height: 100px;
+    fill: #fff;
+    -webkit-animation: pulse 1.3s infinite;
+    animation: pulse 1.3s infinite; }
+    .down .icon:hover {
+      color: white; }
+    .down .icon:active {
+      color: white; }
 
 .icons-header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  text-align: center;
-}
-
-.icons-header .icon {
-  text-align: center;
-  color: #FFF;
-  width: 2em;
-  height: 2em;
-  font-size: 2em;
-  padding: 0.5em 0em 0em 0em;
-  margin: 0.5rem;
-  border-radius: 50%;
-  border: 2px solid #FFF;
-  -webkit-transition: all .7s;
-  transition: all .7s;
-}
-
-.icons-header .icon:hover {
-  color: #233237;
-  background: #FFF;
-}
-
-.icons-header .icon:active {
-  color: #233237;
-  background: #FFF;
-}
-
-@media only screen and (min-width: 768px) {
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center; }
   .icons-header .icon {
+    text-align: center;
+    color: #FFF;
     width: 2em;
     height: 2em;
     font-size: 2em;
-  }
-}
+    padding: 0.5em 0em 0em 0em;
+    margin: 0.5rem;
+    border-radius: 50%;
+    border: 2px solid #FFF;
+    -webkit-transition: all .7s;
+    transition: all .7s; }
+    .icons-header .icon:hover {
+      color: #233237;
+      background: #FFF; }
+    .icons-header .icon:active {
+      color: #233237;
+      background: #FFF; }
+    @media only screen and (min-width: 768px) {
+      .icons-header .icon {
+        width: 2em;
+        height: 2em;
+        font-size: 2em; } }
