--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -6,7 +6,7 @@
     </h1>
     <div class="icons-header">
       <a aria-label="Send email" href="mailto:{{site.email}}"><i class="icon fa fa-envelope"></i></a>
-      <a aria-label="My Research" target="_blank" href="/publications"><i class="icon fa fa-flask" aria-hidden="true"></i></a>
+      <a aria-label="My Research" href="/publications"><i class="icon fa fa-flask" aria-hidden="true"></i></a>
       <a aria-label="My Vimeo" target="_blank" href="{{site.vimeo}}"><i class="icon fa fa-vimeo" aria-hidden="true"></i></a>
       <a aria-label="My Github" target="_blank" href="https://github.com/{{site.github}}"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
     </div>
