--- a/_includes/contactrow.html
+++ b/_includes/contactrow.html
@@ -8,17 +8,17 @@
         <p class="card-text">
           <strong>Victor E. A. Caldas</strong>
           <div class="hline-w"></div>
-          Postoctoral Fellow <br>
-          <a href="mailto:v.arminicaldas@vu.nl">v.arminicaldas@vu.nl</a><br>
+          Data Scientist <br>
+          <a href="mailto:caldas.victor@gmail.com">caldas.victor@gmail.com</a><br>
       </div>
     </div>
 
     <div class="col-sm-4">
       <div class="card-block">
         <p class="card-text">
-          <i class="fa fa-building"></i> Where to find me
+        <!--   <i class="fa fa-building"></i> Where to find me
           <div class="hline-w"></div>
-          <strong>Vrije Universiteit</strong><br> FALW - Dept. Animal Ecology <br> De Boelelaan, 1085 - Office M.152<br> 1081HV Amsterdam, NH<br> The Netherlands
+          <strong>Cargill BV</strong><br> FALW - Dept. Animal Ecology <br> De Boelelaan, 1085 - Office M.152<br> 1081HV Amsterdam, NH<br> The Netherlands -->
       </div>
     </div>
 
