--- a/website/templates/landing.html
+++ b/website/templates/landing.html
@@ -3,6 +3,8 @@
 
 <head>
   {%include "head.html" %}
+  <link href= "{{ url_for('static',filename='font-awesome/css/all.css') }}" rel="stylesheet"> <!--load all styles -->
+  <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/main.css') }}">
 
 </head>
 
