--- a/website/templates/landing.html
+++ b/website/templates/landing.html
@@ -3,7 +3,7 @@
 
 <head>
   {%include "head.html" %}
-  <link href= "{{ url_for('static',filename='font-awesome/css/all.css') }}" rel="stylesheet"> <!--load all styles -->
+  <link href= "{{ url_for('static',filename='font-awesome/css/all.css') }}" rel="stylesheet" type= "text/css"> <!--load all styles -->
   <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/main.css') }}">
 
 </head>
