--- a/website/templates/head.html
+++ b/website/templates/head.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap core CSS -->
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/main.css') }}">
     <!-- Custom fonts for this template -->
-    <link href= "{{ url_for('static',filename='font-awesome/css/all.css') }}" rel="stylesheet" type= "text/css"> <!--load all styles -->
+    <link href= "{{ url_for('static',filename='font-awesome/css/all.min.css') }}" rel="stylesheet" type= "text/css"> <!--load all styles -->
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
 
