--- a/website/templates/blog/index.html
+++ b/website/templates/blog/index.html
@@ -1,18 +1,11 @@
-<h3>Contents</h3>
-<table border="2px">
-  <thead>
-  <tr>
-    <td> Title </td>
-    <td> Link </td>
-  </tr>
-  </thead>
+{% extends "default.html" %}
+{% block content %}
 
-
-  {% for page in pages %}
-  <tr>
-    <td> {{ page.title }}</td>
-    <td> <a href="{{ page.path }}.html"> Read </a></td>
-  </tr>
-  {% endfor %}
-
-</table>
+<div id="content" class="row">
+  <section class="col-sm-6 summary-list">
+    <h2>Lastest blog posts</h2>
+    {% include "blog/article_summary.html" %}
+    <a class="btn btn-primary" href="{{ url_for('blog.index') }}">More ...</a>
+  </section>
+</div><!-- /#content -->
+{% endblock content %}
