--- a/website/templates/navbar/navcore.html
+++ b/website/templates/navbar/navcore.html
@@ -9,10 +9,10 @@
     <div class="collapse navbar-collapse" id="navbarExample">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#Publications">Publications</a>
-            </li> 
+                <a class="nav-link" href="{{url_for("main.publications") }}">Publications</a>
+            </li>
            <li class="nav-item">
-                <a class="nav-link" href="#blog">Blog</a>
+                <a class="nav-link" href="{{url_for("blog.index") }}">Blog</a>
             </li>
             
             <li class="nav-item">
