Add publications session

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -30,6 +30,8 @@
         <div style="float:right;">
           <ul style="list-style:none;display:flex;">
             <a href="{{ url_for("main.main") }}" class="left"><li class="link-list">ABOUT</li></a>
+            <!-- <a href="{{ url_for("blog.blog") }}" class="left"><li class="link-list">BLOG</li></a> -->
+            <a href="{{ url_for("main.publications") }}" class="left"><li class="link-list">PUBLICATIONS</li></a>
 
           </ul>
         </div>
