Add blog section

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -30,7 +30,7 @@
         <div style="float:right;">
           <ul style="list-style:none;display:flex;">
             <a href="{{ url_for("main.main") }}" class="left"><li class="link-list">ABOUT</li></a>
-            <!-- <a href="{{ url_for("blog.blog") }}" class="left"><li class="link-list">BLOG</li></a> -->
+            <a href="{{ url_for("blog.blog") }}" class="left"><li class="link-list">BLOG</li></a>
             <a href="{{ url_for("main.publications") }}" class="left"><li class="link-list">PUBLICATIONS</li></a>
 
           </ul>
@@ -47,7 +47,7 @@
     </div>
     <nav class="navfoot">
       <div style="text-align:center;">
-        &copy; 2022 |
+        &copy; 2021 - 2023 |
         &thinsp; <a href="https://www.linkedin.com/in/vcaldas" class="link-fa"><i class="fa fa-linkedin fa-lg"></i></a>
         &thinsp; <a href="http://github.com/vcaldas" class="link-fa"><i class="fa fa-github fa-lg"></i></a>
         &thinsp; <a href="https://scholar.google.com/citations?user=vdKIs70AAAAJ&hl=en" class="link-fa"><i class="fa fa-graduation-cap fa-lg"></i></a> |
